@@ -13,6 +13,10 @@ changes' is much more useful than 'misc edits' or 'code cleanup'.
 small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
+Remove unused return value.
+ include/sproto.h
+ server/player.c
+Nicolas Weeger, 2008-03-29
 
 Remove static buffer.
  server/hiscore.c
